--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,23 +4,53 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #020817;
+
+  --primary: #2563eb;
+  --primary-foreground: #f8fafc;
+
+  --secondary: #15803d;
+  /* الأخضر الأساسي */
+  --secondary-hover: #166534;
+  /* الأخضر عند الهوفر */
+  --secondary-foreground: #ffffff;
+
+  --accent: #facc15;
+  /* الأصفر */
+  --accent-hover: #eab308;
+  --accent-foreground: #000000;
+
+  --card: #f1f5f9;
+  --card-foreground: #020817;
+
+  --border: #e5e7eb;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+  --background: #020817;
+  --foreground: #f8fafc;
+
+  --primary: #3b82f6;
+  --primary-foreground: #f8fafc;
+
+  --secondary: #14532d;
+  /* الأخضر الداكن */
+  --secondary-hover: #166534;
+  --secondary-foreground: #ffffff;
+
+  --accent: #fbbf24;
+  /* الأصفر الداكن */
+  --accent-hover: #facc15;
+  --accent-foreground: #000000;
+
+  --card: #0f172a;
+  --card-foreground: #f8fafc;
+
+  --border: #374151;
 }
 
 body {
-
+  background-color: var(--background);
+  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
